test/errhandling/psahabu/generic-throws.good
generic-throws.chpl:9: error: halt reached - {msg = 42 is a numeric type}
